# aoc24

./: .gitignore  Readme.org  aoc24.cabal  flake.nix
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Fetch.hs  Scratch.hs
scripts/: populate  template.hs
src/: Aoc.hs
src/Aoc/: Array.hs  Bounded.hs  Char.hs  Definitions.hs  Direction.hs  DirectionDiag.hs  Enum.hs  Factor.hs  Function.hs  List.hs  Mod.hs  Monad.hs  Occurrence.hs  Parse.hs  Prime.hs  Set.hs  String.hs  Tuple.hs
